Initial working setup for Gitea deployment with MySQL and Ingress

--- a/gitea/ingress.yml
+++ b/gitea/ingress.yml
@@ -4,19 +4,16 @@ metadata:
   name: gitea-ingress
   namespace: default
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
-
+    kubernetes.io/ingress.class: "traefik"
 spec:
-  ingressClassName: nginx # This should match the name of your IngressClass
   rules:
-#  - host: rhildred-gitea.k3p.dev
-  - http:
-      paths:
-        - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: gitea-http
-              port:
-                number: 3000
+    - host: gitea.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: gitea-test-http
+                port:
+                  number: 3000
